tools/cgoslx-gpio/CgosLib/Cgos.h


//***************************************************************************

//
// Board handle
//

typedef unsigned long HCGOS;



//***************************************************************************

//
// Temperature, fan, and voltage structures
//

// Temperature in units of 1/1000th degrees celcius

typedef struct {
  unsigned long dwSize;
  unsigned long dwType;
  unsigned long dwFlags;
  unsigned long dwAlarm;
  unsigned long dwRes;
  unsigned long dwMin;
  unsigned long dwMax;
  unsigned long dwAlarmHi;
  unsigned long dwHystHi;
  unsigned long dwAlarmLo;
  unsigned long dwHystLo;
  } CGOSTEMPERATUREINFO;


// Fan speed values in RPM (revolutions per minute)

typedef struct {
  unsigned long dwSize;
  unsigned long dwType;
  unsigned long dwFlags;
  unsigned long dwAlarm;
  unsigned long dwSpeedNom;
  unsigned long dwMin;
  unsigned long dwMax;
  unsigned long dwAlarmHi;
  unsigned long dwHystHi;
  unsigned long dwAlarmLo;
  unsigned long dwHystLo;
  unsigned long dwOutMin;
  unsigned long dwOutMax;
  } CGOSFANINFO;


// Voltage in units of 1/1000th volt

typedef struct {
  unsigned long dwSize;
  unsigned long dwType;
  unsigned long dwNom;
  unsigned long dwFlags;
  unsigned long dwAlarm;
  unsigned long dwRes;
  unsigned long dwMin;
  unsigned long dwMax;
  unsigned long dwAlarmHi;
  unsigned long dwHystHi;
  unsigned long dwAlarmLo;
  unsigned long dwHystLo;
  } CGOSVOLTAGEINFO;

cgosret_bool CgosTemperatureGetInfo(HCGOS hCgos, unsigned long dwUnit, CGOSTEMPERATUREINFO *pInfo);

cgosret_bool CgosTemperatureGetCurrent(HCGOS hCgos, unsigned long dwUnit, unsigned long *pdwSetting, unsigned long *pdwStatus);


// Fan

cgosret_ulong CgosFanCount(HCGOS hCgos);

cgosret_bool CgosFanGetInfo(HCGOS hCgos, unsigned long dwUnit, CGOSFANINFO *pInfo);

cgosret_bool CgosFanGetCurrent(HCGOS hCgos, unsigned long dwUnit, unsigned long *pdwSetting, unsigned long *pdwStatus);


// Voltage

cgosret_ulong CgosVoltageCount(HCGOS hCgos);

cgosret_bool CgosVoltageGetInfo(HCGOS hCgos, unsigned long dwUnit, CGOSVOLTAGEINFO *pInfo);

cgosret_bool CgosVoltageGetCurrent(HCGOS hCgos, unsigned long dwUnit, unsigned long *pdwSetting, unsigned long *pdwStatus);