tools/CgosPy_1_2/cgos/cgos.py


# bool CgosTemperatureGetInfo(HCGOS hCgos, unsigned long dwUnit, CGOSTEMPERATUREINFO *pInfo)
def temperatureGetInfo(dwUnit):
	# Temperature in units of 1/1000th degrees celcius
	class CGOSTEMPERATUREINFO(ctypes.Structure):
		_fields_ = [
			('dwSize', ctypes.c_uint32),
			('dwType', ctypes.c_uint32),
			('dwFlags', ctypes.c_uint32),
			('dwAlarm', ctypes.c_uint32),
			('dwRes', ctypes.c_uint32),
			('dwMin', ctypes.c_uint32),
			('dwMax', ctypes.c_uint32),
			('dwAlarmHi', ctypes.c_uint32),
			('dwHystHi', ctypes.c_uint32),
			('dwAlarmLo', ctypes.c_uint32),
			('dwHystLo', ctypes.c_uint32),
		]
	cgostemperatureinfo = CGOSTEMPERATUREINFO(0)
	cgostemperatureinfo.dwSize = len((cgostemperatureinfo._fields_) * ctypes.sizeof(ctypes.c_uint32))
	_cgos.CgosTemperatureGetInfo.argtypes = (ctypes.c_uint, ctypes.c_ulong, ctypes.c_voidp)
	_cgos.CgosTemperatureGetInfo.restype = ctypes.c_bool
	if (_cgos.CgosTemperatureGetInfo(hCgos, dwUnit, ctypes.addressof(cgostemperatureinfo))) == True:
		results = {}
		for field in cgostemperatureinfo._fields_: results[field[0]] = getattr(cgostemperatureinfo, field[0])
		results['dwRes'] = ((ctypes.c_int)(results['dwRes'])).value
		results['dwMax'] = ((ctypes.c_int)(results['dwMax'])).value
		results['dwMin'] = ((ctypes.c_int)(results['dwMin'])).value
		results['dwAlarmHi'] = ((ctypes.c_int)(results['dwAlarmHi'])).value
		results['dwAlarmLo'] = ((ctypes.c_int)(results['dwAlarmLo'])).value
		results['dwHystHi'] = ((ctypes.c_int)(results['dwHystHi'])).value
		results['dwHystLo'] = ((ctypes.c_int)(results['dwHystLo'])).value
		return results
	else: return False

# bool CgosTemperatureGetCurrent(HCGOS hCgos, unsigned long dwUnit, unsigned long *pdwSetting, unsigned long *pdwStatus)
def temperatureGetCurrent(dwUnit):
	_cgos.CgosTemperatureGetCurrent.argtypes = (ctypes.c_uint, ctypes.c_ulong, ctypes.POINTER(ctypes.c_ulong), ctypes.POINTER(ctypes.c_ulong))
	_cgos.CgosTemperatureGetCurrent.restype = ctypes.c_bool
	pdwSetting = ctypes.c_ulong(0)
	pdwStatus = ctypes.c_ulong(0)
	if _cgos.CgosTemperatureGetCurrent(hCgos, dwUnit, ctypes.byref(pdwSetting), ctypes.byref(pdwStatus)) == True: 
		results = {'pdwSetting' : pdwSetting.value, 'pdwStatus' : pdwStatus.value}
		return results
	else: return False

	##################################
	#####   FUNCTION GROUP FAN   #####
	##################################	

# ulong CgosFanCount(HCGOS hCgos)
def fanCount():
	_cgos.CgosFanCount.argtype = ctypes.c_uint
	_cgos.CgosFanCount.restype = ctypes.c_ulong
	return _cgos.CgosFanCount(hCgos)

# bool CgosFanGetInfo(HCGOS hCgos, unsigned long dwUnit, CGOSFANINFO *pInfo)
def fanGetInfo(dwUnit):
	# Fan speed values in RPM (revolutions per minute)
	class CGOSFANINFO(ctypes.Structure):
		_fields_ = [
			('dwSize', ctypes.c_uint32),
			('dwType', ctypes.c_uint32),
			('dwFlags', ctypes.c_uint32),
			('dwAlarm', ctypes.c_uint32),
			('dwSpeedNom', ctypes.c_uint32),
			('dwMin', ctypes.c_uint32),
			('dwMax', ctypes.c_uint32),
			('dwAlarmHi', ctypes.c_uint32),
			('dwHystHi', ctypes.c_uint32),
			('dwAlarmLo', ctypes.c_uint32),
			('dwHystLo', ctypes.c_uint32),
			('dwOutMin', ctypes.c_uint32),
			('dwOutMax', ctypes.c_uint32),
		]
	cgosfaninfo = CGOSFANINFO(0)
	cgosfaninfo.dwSize = len((cgosfaninfo._fields_) * ctypes.sizeof(ctypes.c_uint32))
	_cgos.CgosFanGetInfo.argtypes = (ctypes.c_uint, ctypes.c_ulong, ctypes.c_voidp)
	_cgos.CgosFanGetInfo.restype = ctypes.c_bool
	if (_cgos.CgosFanGetInfo(hCgos, dwUnit, ctypes.addressof(cgosfaninfo))) == True:
		results = {}
		for field in cgosfaninfo._fields_: results[field[0]] = getattr(cgosfaninfo, field[0])
		results['dwSpeedNom'] = ((ctypes.c_int)(results['dwSpeedNom'])).value
		results['dwMax'] = ((ctypes.c_int)(results['dwMax'])).value
		results['dwMin'] = ((ctypes.c_int)(results['dwMin'])).value
		results['dwAlarmHi'] = ((ctypes.c_int)(results['dwAlarmHi'])).value
		results['dwAlarmLo'] = ((ctypes.c_int)(results['dwAlarmLo'])).value
		results['dwHystHi'] = ((ctypes.c_int)(results['dwHystHi'])).value
		results['dwHystLo'] = ((ctypes.c_int)(results['dwHystLo'])).value
		results['dwOutMin'] = ((ctypes.c_int)(results['dwOutMin'])).value
		results['dwOutMax'] = ((ctypes.c_int)(results['dwOutMax'])).value
		return results
	else: return False

# bool CgosFanGetCurrent(HCGOS hCgos, unsigned long dwUnit, unsigned long *pdwSetting, unsigned long *pdwStatus)
def fanGetCurrent(dwUnit):
	_cgos.CgosFanGetCurrent.argtypes = (ctypes.c_uint, ctypes.c_ulong, ctypes.POINTER(ctypes.c_ulong), ctypes.POINTER(ctypes.c_ulong))
	_cgos.CgosFanGetCurrent.restype = ctypes.c_bool
	pdwSetting = ctypes.c_ulong(0)
	pdwStatus = ctypes.c_ulong(0)
	if _cgos.CgosFanGetCurrent(hCgos, dwUnit, ctypes.byref(pdwSetting), ctypes.byref(pdwStatus)) == True:
		results = {'pdwSetting' : pdwSetting.value, 'pdwStatus' : pdwStatus.value}
		return results
	else: return False

	######################################
	#####   FUNCTION GROUP VOLTAGE   #####
	######################################

# ulong CgosVoltageCount(HCGOS hCgos)
def voltageCount():
	_cgos.CgosVoltageCount.argtype = ctypes.c_uint
	_cgos.CgosVoltageCount.restype = ctypes.c_ulong
	return _cgos.CgosVoltageCount(hCgos)

# bool CgosVoltageGetInfo(HCGOS hCgos, unsigned long dwUnit, CGOSVOLTAGEINFO *pInfo)
def voltageGetInfo(dwUnit):
	# Voltage in units of 1/1000th volt
	class CGOSVOLTAGEINFO(ctypes.Structure):
		_fields_ = [
			('dwSize', ctypes.c_uint32),
			('dwType', ctypes.c_uint32),
			('dwNom', ctypes.c_uint32),
			('dwFlags', ctypes.c_uint32),
			('dwAlarm', ctypes.c_uint32),
			('dwRes', ctypes.c_uint32),
			('dwMin', ctypes.c_uint32),
			('dwMax', ctypes.c_uint32),
			('dwAlarmHi', ctypes.c_uint32),
			('dwHystHi', ctypes.c_uint32),
			('dwAlarmLo', ctypes.c_uint32),
			('dwHystLo', ctypes.c_uint32),
		]
	cgosvoltageinfo = CGOSVOLTAGEINFO(0)
	cgosvoltageinfo.dwSize = len((cgosvoltageinfo._fields_) * ctypes.sizeof(ctypes.c_uint32))
	_cgos.CgosVoltageGetInfo.argtypes = (ctypes.c_uint, ctypes.c_ulong, ctypes.c_voidp)
	_cgos.CgosVoltageGetInfo.restype = ctypes.c_bool
	if (_cgos.CgosVoltageGetInfo(hCgos, dwUnit, ctypes.addressof(cgosvoltageinfo))) == True:
		results = {}
		for field in cgosvoltageinfo._fields_: results[field[0]] = getattr(cgosvoltageinfo, field[0])
		results['dwRes'] = ((ctypes.c_int)(results['dwRes'])).value
		results['dwNom'] = ((ctypes.c_int)(results['dwNom'])).value
		results['dwMax'] = ((ctypes.c_int)(results['dwMax'])).value
		results['dwMin'] = ((ctypes.c_int)(results['dwMin'])).value
		results['dwAlarmHi'] = ((ctypes.c_int)(results['dwAlarmHi'])).value
		results['dwAlarmLo'] = ((ctypes.c_int)(results['dwAlarmLo'])).value
		results['dwHystHi'] = ((ctypes.c_int)(results['dwHystHi'])).value
		results['dwHystLo'] = ((ctypes.c_int)(results['dwHystLo'])).value
		return results
	else: return False

# bool CgosVoltageGetCurrent(HCGOS hCgos, unsigned long dwUnit, unsigned long *pdwSetting, unsigned long *pdwStatus)
def voltageGetCurrent(dwUnit):
	_cgos.CgosVoltageGetCurrent.argtypes = (ctypes.c_uint, ctypes.c_ulong, ctypes.POINTER(ctypes.c_ulong), ctypes.POINTER(ctypes.c_ulong))
	_cgos.CgosVoltageGetCurrent.restype = ctypes.c_bool
	pdwSetting = ctypes.c_ulong(0)
	pdwStatus = ctypes.c_ulong(0)
	if _cgos.CgosVoltageGetCurrent(hCgos, dwUnit, ctypes.byref(pdwSetting), ctypes.byref(pdwStatus)) == True:
		results = {'pdwSetting' : pdwSetting.value, 'pdwStatus' : pdwStatus.value}
		return results
	else: return False

	##########################################################
	#####   CGOS.PY SPECIFIC FUNCTIONS FOR CONVENIENCE   #####
	##########################################################

# Open the CGOS interface using only one command
def openif():
	if libInitialize() == False:
		if libInstall(1) == False:
			print ("ERROR: Failed to install CGOS interface.") #MOD003
			return False
		if libInitialize() == False:
			print ("ERROR: Failed to initialize CGOS interface.") #MOD003
			return False
	if boardOpen(0,0,0) == False:
		print ("Could not open a board.") #MOD003
		return False
	return True

# Close the CGOS interface using only one command
def closeif():
	if boardClose() == False:
		print ("ERROR: Failed to close CGOS interface.") #CGMOD003
		return False
	if libUninitialize() == False:
		print ("ERROR: Failed to un-initialize CGOS interface.") #CGMOD003
		return False
	return True
